# sancheck

./: .env.example  .gitignore  CODEX_USAGE.md  INSTALL.md  LICENSE  README.md  SETUP.md  devpost.md  index.html  package-lock.json  package.json  pyproject.toml  start-servers.sh  tsconfig.app.json  vite.config.ts
.github/workflows/: ci.yml  deploy-docs.yml  deploy.yml
docs/: next.config.ts  package.json  source.config.ts  source.ts  tsconfig.json
docs/.next/: _events_67810.json  next-minimal-server.js.nft.json  next-server.js.nft.json  trace  trace-build
docs/.next/cache/: .previewinfo  .rscinfo
docs/.next/dev/: prerender-manifest.json  trace
docs/.next/dev/cache/: .rscinfo
docs/.next/dev/server/: server-reference-manifest.js  (+1 more)
docs/.next/types/: routes.d.ts  validator.ts
docs/.source/: server.ts  source.config.mjs
docs/app/: layout.tsx  page.tsx
docs/app/css/: global.css
docs/app/docs/: layout.tsx
docs/source/docs/: configuration.mdx  getting-started.mdx  index.mdx  meta.json  middleware.mdx  plugin.mdx  url-gate.mdx
plugins/sancheck/.codex-plugin/: plugin.json
plugins/sancheck/scripts/: sancheck-gate
plugins/seccheck/.codex-plugin/: plugin.json
plugins/seccheck/scripts/: sancheck-gate
scripts/: dev.mjs  sancheck-gate  seccheck-gate  server.mjs
src/: App.tsx  styles.css  themes.css
src/sancheck/: cli.py  env_file.py  heuristics.py  models.py
src/seccheck/: cli.py  prompt_injection.py  scanner.py  threat_intel.py
tests/: test_cli_middleware.py  test_prompt_injection.py  test_scanner_local.py  test_url_utils.py
(+157 files in other folders)
