[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sancheck"
version = "0.1.0"
description = "Real URL safety scanner and link gate with prompt-injection detection."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "sancheck maintainers" }]
dependencies = []

[project.scripts]
sancheck = "sancheck.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
