[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "seccheck"
version = "0.1.0"
description = "Real URL safety scanner and link gate with prompt-injection detection."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "seccheck maintainers" }]
dependencies = []

[project.scripts]
seccheck = "seccheck.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
